# fiap-tech4

./: .env  LICENSE  README.md  app.py  patients.db  pyproject.toml  records.db  requirements.txt  tmp_generate_pdf.py  tmp_pdf_test.py
Docs/: Possiveis Modificaçãoes de melhorias.docx
data/: df_model_final.csv  patients.db
notebook/: analytics.ipynb  models_classification_predicts.ipynb  xgb_model.joblib
notebook/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
src/: 1_dash.py  2_dash.py  app.py  aquisicao_obesidade_will.ipynb  exploracao.ipynb  model_tuning.py  production_pipeline.py  streamlit_app.py  streamlit_app_full.py  train_pipeline.py
src/legacy/: Dashboard.py
src/models/: production_pipeline.py  random_forest_final.joblib  train_pipeline.py  xgb_model.joblib
src/notebooks/: eda.ipynb
src/pages/: Dashboard.py  Historico.py  Home.py  Prever.py  Sobre.py
src/shared/: connection.py  paths.py  plots.py  utils.py
src/utils/: connection.py  paths.py  run_streamlit.py  utils.py  validation.py
